[tool.poetry]
name = "SentecePiece"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^3.10.0"
sentencepiece = "^0.1.95"
texthero = "^1.0.9"
gensim = "<=3.8.3"
ipdb = "^0.13.9"
japanize-matplotlib = "^1.1.3"
mecab-python3 = "^1.0.3"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
